# icc-mes-autotrader

./: .env.example  .gitignore  CLAUDE.md  debug_backtest.py  debug_continuation.py  debug_trending.py  full_analysis.py  full_analysis_v2.py  generate_backtest_data.py  generate_trending_data.py  pyproject.toml  render.yaml  simulate_fixed_strategy.py
configs/: options_default.yaml  orb_default.yaml  research_default.yaml  risk_default.yaml  strategy_default.yaml
configs/environments/: backtest.yaml  live.yaml  paper.yaml
frontend/: .env.production  middleware.ts  package-lock.json  package.json
frontend/app/: AppShell.tsx  error.tsx  layout.tsx  page.tsx
frontend/hooks/: useTradingSession.ts  useWebSocket.ts
frontend/lib/: api.ts  env.ts  formatters.ts  types.ts
frontend/stores/: authStore.ts  eventStore.ts  sessionStore.ts  tradingStore.ts
icc/: __init__.py  cli.py  config.py  constants.py  logging_config.py
icc/alerts/: base.py  console_alert.py  email_alert.py  ws_alert.py
icc/backtest/: data_loader.py  engine.py  premium.py  report.py
icc/broker/: backtest.py  base.py  cash_provider.py  lumibot_adapter.py  lumibot_strategy.py  option_chain.py  tos.py
icc/core/: events.py  fsm.py  indicators.py  orb_strategy.py  risk.py  scheduler.py  settlement.py  strategy.py  trader.py  watchdog.py  win_tracker.py
icc/dashboard/: live.py
scripts/: pre_market_cleanup.sh  start_trading.sh
tests/: conftest.py  test_backtest.py  test_fsm.py  test_indicators.py  test_oms.py  test_option_chain.py  test_option_position.py  test_orb_strategy.py  test_premium.py  test_research.py  test_risk.py  test_settlement.py  test_strategy.py
(+43 files in other folders)
