[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icc-mes-autotrader"
version = "0.1.0"
description = "ICC MES AutoTrader — FSM-driven automated trading engine for MES futures"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]

[project.optional-dependencies]
live = [
    "lumibot>=3.0.0",
    "apscheduler>=3.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
icc = "icc.cli:app"

[tool.setuptools.packages.find]
include = ["icc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
